# point_cloud2_filters

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  pass_through_filter.kdev4  point_cloud2_filters_plugins.xml
cfg/: CropBoxPointCloud2.cfg  FilterBasePointCloud2.cfg  FilterIndicesPointCloud2.cfg  FilterPointCloud2.cfg  PassThroughPointCloud2.cfg  SacSegmentationExtractPointCloud2.cfg  VoxelGridPointCloud2.cfg
config/: d435_example.yaml
include/pass_through_filter/: PassThroughFilter.h
include/point_cloud2_filters/: CropBoxFilterPointCloud2.hpp  FilterBasePointCloud2.hpp  FilterIndicesPointCloud2.hpp  FilterPointCloud2.hpp  PassThroughFilterPointCloud2.hpp  SacSegmentationExtractFilterPointCloud2.hpp  VoxelGridFilterPointCloud2.hpp
launch/: d435_example.launch
src/: CropBoxFilterPointCloud2.cpp  FilterBasePointCloud2.cpp  FilterIndicesPointCloud2.cpp  FilterPointCloud2.cpp  PassThroughFilter.cpp  PassThroughFilterPointCloud2.cpp  SacSegmentationExtractFilterPointCloud2.cpp  VoxelGridFilterPointCloud2.cpp
