<?xml version="1.0"?>
<package format="2">
  <name>point_cloud2_filters</name>
  <version>1.0.3</version>
  <description>Filters for the sensor_msgs/PointCloud2 based on the filters and sensor_filters chains</description>

  <author email="toridebraus@gmail.com">Davide Torielli</author>
  <maintainer email="toridebraus@gmail.com">Davide Torielli</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pass_through_filter</url> -->

  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>filters</depend>
  <depend>sensor_msgs</depend>
  
  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <filters plugin="${prefix}/point_cloud2_filters_plugins.xml" />
  </export>
</package>
